# templates

./: README  perl_template.pl  python_template.py  python_test_template.py  ruby_template.rb  ruby_test_template.rb  sh_template.sh
bash/: sh_template.sh
cpypy/cpp/: MANIFEST  Makefile.in  README.md  configure.ac  install
cpypy/cpp/include/: sample.h
cpypy/cpp/lib/: print  sample.d  system  utils
cpypy/cpp/src/: sample.cpp
python/: python_template.py  python_test_template.py
ruby/: ruby_test_template.rb
